# stegno

./: .gitignore  CNAME  Cargo.toml  README.md  privacy.html
android/: settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/stegno/app/: CleanTab.kt  Common.kt  Composer.kt  HideTab.kt  InspectTab.kt  KeysTab.kt  LabTab.kt  MainActivity.kt  RevealTab.kt  ShareTab.kt  SplitTab.kt
android/app/src/main/res/values/: themes.xml
core/: Cargo.toml
core/examples/: kdf_probe.rs  method_audit.rs  rs_probe.rs  scale_probe.rs  toughness_probe.rs
core/src/: analysis.rs  benchmark.rs  carrier.rs  compress.rs  crypto.rs  doctor.rs  fec.rs  fingerprint.rs  image_io.rs  lib.rs  method.rs  passphrase.rs  payload.rs  planner.rs  prng.rs  prp.rs  region.rs  registry.rs  sanitize.rs  seed.rs  sss.rs  structural.rs  video.rs  visualize.rs
core/src/methods/: adaptive_cost.rs  append_eof.rs  bitvec.rs  crc32.rs  dwt_haar.rs  edge_adaptive.rs  hill.rs  lsb_common.rs  lsb_high.rs  lsb_image.rs  lsb_matching.rs  lsb_seeded.rs  lsbmr.rs  mimic_words.rs  mod.rs  mp3_id3.rs  mp4_free.rs  pdf_object.rs  png_text.rs  polyglot.rs  pvd.rs  stl_attrib.rs  unicode_tags.rs  wav_lsb.rs  whitespace.rs  zero_width.rs  zip_comment.rs
core/src/methods/jpeg/: codec.rs  container.rs  dct.rs  f5.rs  hamming.rs  huffman.rs  jsteg.rs  mc.rs  mod.rs  outguess.rs  pipeline.rs  tables.rs
core/tests/: analysis_api.rs  any_carrier.rs  audio.rs  auto_extract.rs  composite.rs  compress_embed.rs  decoy.rs  golden.rs  keyshares.rs  multi_recipient.rs  robust_fec.rs  roundtrip.rs  structural_scan.rs  text_methods.rs
desktop/: index.html  package-lock.json  package.json  vite.config.ts
desktop/src/: App.tsx  api.ts  carrier.ts  revealed.tsx  shared.tsx  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  video_tools.rs
desktop/src/tabs/: CleanTab.tsx  HideTab.tsx  InspectTab.tsx  KeysTab.tsx  LabTab.tsx  RevealTab.tsx  SecretEntry.tsx  ShareTab.tsx  SplitTab.tsx
docs/: roadmap-100-features.md
docs/superpowers/plans/: 2026-06-01-phase0-foundation-lsb.md
docs/superpowers/specs/: 2026-06-01-stegno-design.md
web/: Cargo.toml  build-pwa.sh  serve-pwa.sh
web/src/: lib.rs
web/www/: app.js  index.html  manifest.webmanifest  preview.html  styles.css  sw.js
