[package]
name = "stegno-core"
version = "0.1.0"
edition = "2021"
description = "Offline steganography engine — crypto, payload framing, pluggable methods."
license = "MIT"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "stegno_core"

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"
required-features = ["cli"]

[[bin]]
name = "stegno"
path = "src/bin/stegno.rs"
required-features = ["tools"]

[dependencies]
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp", "webp", "gif"] }
# Already present transitively via `image`/`png`; used directly for the optional
# compression pre-pass (raises effective capacity for compressible secrets).
miniz_oxide = "0.8"
aes-gcm = "0.10"
argon2 = "0.5"
sha2 = "0.10"
getrandom = "0.2"
thiserror = "2"
uniffi = { version = "0.28" }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
proptest = "1"

[features]
default = []
cli = ["uniffi/cli"]
# The `stegno` command-line tool. Kept out of default builds so the library,
# Android `.so`, and Tauri backend don't pull an unused binary.
tools = []
