[package]
name = "stegno-web"
version = "0.1.0"
edition = "2021"
description = "WebAssembly bindings for stegno-core — the engine running offline in a browser PWA."
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
stegno-core = { path = "../core" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

# On wasm, getrandom needs its JS backend (crypto.getRandomValues). Feature
# unification enables it for stegno-core's getrandom too.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
