[package]
name = "stegno-desktop"
version = "0.1.0"
edition = "2021"
description = "Stegno desktop app"

[lib]
name = "stegno_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
stegno-core = { path = "../../core" }
